Fix for a bug #6996

BitKeeper/etc/ignore:
  Added analyse.test client/mysqladmin.c to the ignore list
libmysql/libmysql.c:
  Fix for a bug #6996
  
  This fix enables that after all rows are read from a buffered result,
  mysql_stmt_data_seek(stmt,0) can rewind a counter to the beginning,
  so that rows can be re-fetched.
tests/client_test.c:
  Addition of a test for fix of the bug #6996 in client_test.c